~~~~~~~~~~~~~~~~
version 3.4.1
~~~~~~~~~~~~~~~~

* remove byte specification, not needed and shortens code base

~~~~~~~~~~~~~~~~
version 3.4
~~~~~~~~~~~~~~~~

* fix opening payload with file error by using open instead (thanks jmhickman for PR)
* fix macro injection technique that was not spawning a child process window which would cause powershell to fail
* fix 32 bit compatibility
* add better randomization variable name check conflicts (.lower())
* fix hta attack vector
* add a payload check for custom shellcode and cobalt strike to ensure its formatted properly

~~~~~~~~~~~~~~~~
version 3.3.2
~~~~~~~~~~~~~~~~

* add double () for defender signature update

~~~~~~~~~~~~~~~~
version 3.3.1
~~~~~~~~~~~~~~~~

* fix bugs where vars would be overwritten
* readd exception handling

~~~~~~~~~~~~~~~~
version 3.3
~~~~~~~~~~~~~~~~

* added back 32 bit compatibility
* added better evasion through kernel32.dll
* shaved shellcode size
* move back to IntPtr, system.int32 no longer needed
* add a variable check to ensure theres no variable name conflicts when using the powershell code

~~~~~~~~~~~~~~~~
version 3.2.10
~~~~~~~~~~~~~~~~

* use System.Int32 instead of int

~~~~~~~~~~~~~~~~
version 3.2.9
~~~~~~~~~~~~~~~~

* bugfix causing powershell to terminate

~~~~~~~~~~~~~~~~
version 3.2.8
~~~~~~~~~~~~~~~~

* change intptr to int

~~~~~~~~~~~~~~~~
version 3.2.7
~~~~~~~~~~~~~~~~

* randomize service name (lol)

~~~~~~~~~~~~~~~~
version 3.2.6
~~~~~~~~~~~~~~~~

* added more byte splitting for better evasion
* rewrote components for macro injection to circumvent av
* rewrote components for HTA injection to circumvent av

~~~~~~~~~~~~~~~~
version 3.2.5
~~~~~~~~~~~~~~~~

* add byte splitting based on defender sigs

~~~~~~~~~~~~~~~~
version 3.2.4
~~~~~~~~~~~~~~~~

* added randomized integer lengths for dynamic byte ranges

~~~~~~~~~~~~~~~~
version 3.2.3
~~~~~~~~~~~~~~~~

* create longer byte arrays for defender rule bypass

~~~~~~~~~~~~~~~~
version 3.2.2
~~~~~~~~~~~~~~~~
